Family entry day, Date formating, table fixes

--- a/templates/admin_finances_tutors.html
+++ b/templates/admin_finances_tutors.html
@@ -10,13 +10,13 @@
     <!-- Navigationsleiste -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="/admin_dashboard">Admin Panel</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Navigation umschalten">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/modify_lessons">Lektionen bearbeiten</a>
+                    <a class="nav-link" href="/modify_lessons">Lektion bearbeiten</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/modify_users">Benutzer bearbeiten</a>
@@ -25,12 +25,13 @@
                     <a class="nav-link" href="/modify_subjects">Fächer bearbeiten</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/modify_tutors">Tutoren bearbeiten</a>
+                    <a class="nav-link" href="/modify_family">Familie bearbeiten</a>
                 </li>
-                <!-- Weitere Links falls benötigt -->
+                <!-- Weitere Links hinzufügen, falls erforderlich -->
             </ul>
         </div>
     </nav>
+
     <br>
     <div class="d-flex justify-content-center mb-3">
         <a href="/admin/finances" class="btn btn-info mr-2">Globale Finanzen</a>
