--- a/templates/admin_finances_families.html
+++ b/templates/admin_finances_families.html
@@ -72,7 +72,7 @@
                     <th>Datum</th>
                     <th>Fach</th>
                     <th>Schülername</th>
-                    <th>Preis</th>
+                    <th>Stundenpreis</th>
                     <th>Rabatt</th>
                     <th>Endpreis</th>
                 </tr>
