--- a/templates/admin_financess.html
+++ b/templates/admin_financess.html
@@ -84,7 +84,7 @@
                 <th>Thema</th>
                 <th>Tutor Name</th>
                 <th>Schülernamen</th>
-                <th>Preis</th>
+                <th>Stundenpereis</th>
                 <th>Rabatt (%)</th>
                 <th>Endpreis</th>
                 <th>Tutorzahlung</th>
