--- a/templates/fit4school.html
+++ b/templates/fit4school.html
@@ -332,7 +332,7 @@ footer p{
     <div class="feature">
       <img src="static/images/cool_crm.png" alt="Feature 1" >
       <h2>Systemarchitektur</h2>
-      <p>Erstellung und Umsetzug komplexer Systeme, mit einem Fokus auf die Anpassung des Systems auf die Bedürfnissen des Kunden</p>
+      <p>Erstellung und Umsetzug komplexer Systeme, mit einem Fokus auf die Feineinstellung angepasst an die Bedürfnisse des Kunden</p>
     </div>
     <div class="feature">
       <img src="static/images/calendar.png" alt="Feature 2">
