--- a/templates/fit4school.html
+++ b/templates/fit4school.html
@@ -307,6 +307,10 @@ footer p{
     color: #fff;
 } 
 
+#home {
+    text-align: center;
+  }
+
   </style>
 </head>
 <body>
@@ -321,7 +325,8 @@ footer p{
   <section id="home">
     <h2>Willkommen bei Fit4School Bern-Eigerplatz</h2>
     <p>
-      Ein innovatives Scheduling-System, massgeschneidert für die spezifischen Anforderungen von Lehrbetrieben und Bildungseinrichtungen, vereinfacht die Planung und Verwaltung von Nachhilfestunden durch einen übersichtlichen Kalender. Es ermöglicht eine effiziente Organisation des Unterrichts mit benutzerfreundlichen Funktionen und Echtzeit-Updates für einen stets aktuellen Überblick über Termine und Verfügbarkeiten. Als exklusive Softwarelösung ist es darauf ausgerichtet, alle Aspekte des Bildungsmanagements nahtlos zu erfassen und zu optimieren, und bietet das ultimative Werkzeug für präzise, personalisierte Verwaltung.</p>
+      Ein innovatives Scheduling-System, massgeschneidert für die spezifischen Anforderungen von Lehrbetrieben und Bildungseinrichtungen, vereinfacht die Planung und Verwaltung von Nachhilfestunden durch einen übersichtlichen Kalender. Es ermöglicht eine effiziente Organisation des Unterrichts mit benutzerfreundlichen Funktionen und Echtzeit-Updates für einen stets aktuellen Überblick über Termine und Verfügbarkeiten. Als exklusive Softwarelösung ist es darauf ausgerichtet, alle Aspekte des Bildungsmanagements nahtlos zu erfassen und zu optimieren, und bietet das ultimative Werkzeug für präzise, personalisierte Verwaltung.
+    </p>
     </section>
 
 
