--- a/templates/add_lesson.html
+++ b/templates/add_lesson.html
@@ -331,7 +331,8 @@
                         }
 
                         // Final price calculation incorporating the duration
-                        const finalPrice = price * duration * (1 - adjustmentValue);
+                        let finalPrice = price * duration * (1 - adjustmentValue);
+                        finalPrice = Math.round(finalPrice / 0.05) * 0.05;
 
                         // Set the final price, rounded to 2 decimal places
                         finalPriceInput.value = finalPrice.toFixed(2);
