--- a/templates/admin_financess.html
+++ b/templates/admin_financess.html
@@ -74,7 +74,6 @@
             </div>
             <div class="col d-flex align-items-end">
                 <button type="submit" class="btn btn-primary">Filtern</button>
-                <a href="{{ url_for('download_finances_pdf', from_date=default_from_date, end_date=default_end_date) }}" class="btn btn-success ml-2">Gesamtfinanzen PDF herunterladen</a>
             </div>
         </div>
     </form>
@@ -87,6 +86,7 @@
                 <th>Tutor Name</th>
                 <th>Schülernamen</th>
                 <th>Stundenpereis</th>
+                <th>Dauer (Stunden)</th>
                 <th>Rabatt (%)</th>
                 <th>Endpreis</th>
                 <th>Tutorzahlung</th>
@@ -101,6 +101,7 @@
                     <td>{{ lesson.tutor_name }}</td>
                     <td>{{ lesson.student_names|join(', ') }}</td>
                     <td>{{ lesson.price }}</td>
+                    <td>{{ lesson.duration_hours }}</td>
                     <td>{{ lesson.discount }}</td>
                     <td>{{ lesson.final_price | round(2) }}</td>
                     <td>{{ lesson.tutor_payment | round(2) }}</td>                    
